--- a/trunk/yawp/src/eqtalMsg_pt.properties
+++ b/trunk/yawp/src/eqtalMsg_pt.properties
@@ -38,3 +38,4 @@ ultimos_coments=O que andam falando?
 entre_conta_google=Ou entre utilizando sua conta Google
 adicionar_contato= Adicionar contato
 remover_contato=Remover Contato
+usuario.existente = Usuario/E-mail já cadastrado.
