--- a/trunk/yawp/src/eqtalMsg_pt.properties
+++ b/trunk/yawp/src/eqtalMsg_pt.properties
@@ -39,3 +39,7 @@ entre_conta_google=Ou entre utilizando sua conta Google
 adicionar_contato= Adicionar contato
 remover_contato=Remover Contato
 usuario.existente = Usuario/E-mail já cadastrado.
+
+
+############# HTML Mensagens ################
+user_add_mail = 
