--- a/trunk/yawp/src/eqtalMsg_pt.properties
+++ b/trunk/yawp/src/eqtalMsg_pt.properties
@@ -42,4 +42,4 @@ usuario.existente = Usuario/E-mail já cadastrado.
 
 
 ############# HTML Mensagens ################
-user_add_mail = 
+user_add_mail= Bem vindo ao EQtal, você acabou de se cadastrar. Clique no link para ativar sua conta => http://localhost:8888/user/enable?u_mail={0}&enable_key={1}
