--- a/trunk/yawp/src/eqtalMsg_pt.properties
+++ b/trunk/yawp/src/eqtalMsg_pt.properties
@@ -39,7 +39,8 @@ entre_conta_google=Ou entre utilizando sua conta Google
 adicionar_contato= Adicionar contato
 remover_contato=Remover Contato
 usuario.existente = Usuario/E-mail já cadastrado.
-
+remember_mail_enable=Por favor, acesse o link enviado ao seu e-mail para habilitar sua conta.
+send_remember_mail_enable=Reenviar o e-mail de habilitação?
 
 ############# HTML Mensagens ################
 user_add_mail= Bem vindo ao EQtal, você acabou de se cadastrar. Clique no link para ativar sua conta => http://localhost:8888/user/enable?u_mail={0}&enable_key={1}
