--- a/trunk/yawp/src/eqtalMsg_pt.properties
+++ b/trunk/yawp/src/eqtalMsg_pt.properties
@@ -19,10 +19,12 @@ buscar=Buscar
 twitter=Twitter
 fcbook=Facebook
 orkut=Orkut
-contatos=Contatosrnune
+contatos=Contatos
 comentarios=Comentários
 remover=Remover
-
+site=Site
+descricao=Descri&ccedil;&atilde;o
+categorias=Categorias
 
 
 
