--- a/trunk/yawp/src/eqtalMsg_pt.properties
+++ b/trunk/yawp/src/eqtalMsg_pt.properties
@@ -32,7 +32,7 @@ categorias=Categorias
 gostou_recomenda= Gostou? Recomenda?
 conta_pra_gente=Conta pra gente!
 txt_busca_empresa=ex: Empresa, Categoria
-txt_busca_cidade=ex: São Paulo, Curitiba
+txt_busca_cidade=ex: S&atilde;o Paulo, Curitiba
 ultimos_coments=O que andam falando?
 entre_conta_google=Ou entre utilizando sua conta Google
 adicionar_contato= Adicionar contato
